Show speaker names in bio section

--- a/program.html
+++ b/program.html
@@ -13,7 +13,7 @@ permalink: /program/
     <div class="media">
       <div class="media-left"><img class="media-object" src="{{ presenter.image }}"></img></div>
       <div class="media-body">
-        <h4 class="media-heading">Speaker Bio</h4>
+        <h4 class="media-heading">{{ presenter.name }}</h4>
         {{ presenter.content }}
       </div>
     </div>
