Adding more stuff to the front page: inclusivity, sponsors

--- a/index.html
+++ b/index.html
@@ -24,5 +24,27 @@ layout: default
   </div>
 </div>
 
-<h2>Schedule</h2>
-{% include schedule.html %}
+<h2 class="text-center">Keynote Speakers</h2>
+<div class="row text-center">
+  <div class="col-xs-4 col-xs-offset-1">
+    <img src="/assets/cage1.jpg" class="img-responsive" style="width: 100%;"/>
+    <strong>The Big Man</strong>
+  </div>
+  <div class="col-xs-4 col-xs-offset-2">
+    <img src="/assets/cage6.jpg" class="img-responsive" style="width: 100%;"/>
+    <strong>Chief</strong>
+  </div>
+</div>
+
+<h2 class="text-center">Inclusivity Statement</h2>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at mauris at
+  est ultricies bibendum. Morbi id laoreet enim. Nam vel massa sed lacus semper
+  mattis. Sed ac enim vestibulum, tristique orci a, faucibus est. Duis accumsan
+  ut dui quis condimentum. Pellentesque sed nisl vel neque convallis egestas.
+  Sed mollis ultricies congue. <a href="/inclusivity">Nullam posuere eros non fermentum</a>
+  vestibulum.
+</p>
+
+<h2 class="text-center">Sponsors</h2>
+SPONSORS!!!
