Make everything huge on the front page

--- a/index.html
+++ b/index.html
@@ -10,41 +10,55 @@ layout: default
   </p>
 </div>
 
-<div class="container">
+
+<div class="row">
   <div class="col-xs-6 text-center">
     <p><i class="fa fa-clock-o"></i> When</p>
     <h1>April 3-4, 2015</h1>
-    <p>Starts at 5pm</p>
+    <p class="lead">Starts at 5pm</p>
   </div>
 
   <div class="col-xs-6 text-center">
     <p><i class="fa fa-map-marker"></i> Where</p>
     <h1>Brooklyn, NY</h1>
-    <p>NYU Magnet Center</p>
+    <p class="lead">NYU Magnet Center</p>
   </div>
 </div>
 
-<h2 class="text-center">Keynote Speakers</h2>
-<div class="row text-center">
-  <div class="col-xs-4 col-xs-offset-1">
-    <img src="/assets/cage1.jpg" class="img-responsive" style="width: 100%;"/>
-    <strong>The Big Man</strong>
-  </div>
-  <div class="col-xs-4 col-xs-offset-2">
-    <img src="/assets/cage6.jpg" class="img-responsive" style="width: 100%;"/>
-    <strong>Chief</strong>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+  <h2 class="featurette-heading text-center">Keynote Speakers</h2>
+  <div class="row text-center">
+    <div class="col-xs-4 col-xs-offset-1">
+      <img src="/assets/cage1.jpg" class="img-responsive" style="width: 100%;"/>
+      <p class="lead">The Big Man</p>
+    </div>
+    <div class="col-xs-4 col-xs-offset-2">
+      <img src="/assets/cage6.jpg" class="img-responsive" style="width: 100%;"/>
+      <p class="lead">Chief</p>
+    </div>
   </div>
 </div>
 
-<h2 class="text-center">Inclusivity Statement</h2>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at mauris at
-  est ultricies bibendum. Morbi id laoreet enim. Nam vel massa sed lacus semper
-  mattis. Sed ac enim vestibulum, tristique orci a, faucibus est. Duis accumsan
-  ut dui quis condimentum. Pellentesque sed nisl vel neque convallis egestas.
-  Sed mollis ultricies congue. <a href="/inclusivity">Nullam posuere eros non fermentum</a>
-  vestibulum.
-</p>
+<hr class="featurette-divider">
 
-<h2 class="text-center">Sponsors</h2>
-SPONSORS!!!
+<div class="featurette">
+  <h2 class="featurette-heading text-center">Inclusivity Statement</h2>
+  <p class="lead">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at mauris at
+    est ultricies bibendum. Morbi id laoreet enim. Nam vel massa sed lacus semper
+    mattis. Sed ac enim vestibulum, tristique orci a, faucibus est. Duis accumsan
+    ut dui quis condimentum. Pellentesque sed nisl vel neque convallis egestas.
+    Sed mollis ultricies congue. <a href="/inclusivity">Nullam posuere eros non fermentum</a>
+    vestibulum.
+  </p>
+</div>
+
+<hr class="featurette-divider">
+
+<div class="featurette">
+  <h2 class="featurette-heading text-center">Sponsors</h2>
+  <p class="lead">SPONSORS!!!</p>
+</div>
+
